--- a/osa2/puhelinluettelo/src/index.css
+++ b/osa2/puhelinluettelo/src/index.css
@@ -1,10 +1,23 @@
 body {
   margin: 0;
+  color: #13293d;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+  background-color: #f0edee;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: grid;
+  place-items: center;
+}
+
+h1 {
+  align-content: center;
+}
+
+ul {
+  margin: 0px;
+  padding: 0px;
 }
 
 code {
