--- a/osa2/puhelinluettelo/src/index.css
+++ b/osa2/puhelinluettelo/src/index.css
@@ -7,8 +7,10 @@ body {
   background-color: #f0edee;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  display: grid;
-  place-items: center;
+  margin: 0 auto;
+  width: 50vw;
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
