Support waiting state better

--- a/osa2/maiden_tiedot/src/components/CountryLister.css
+++ b/osa2/maiden_tiedot/src/components/CountryLister.css
@@ -78,3 +78,12 @@
     margin: 5px;
 }
 
+.waiting {
+    margin: 10px;
+    padding: 10px;
+    border: 2px solid black;
+    border-radius: 10px;
+    background-color: lightpink;
+    font-size: 2rem;
+}
+
